Upload Employee project only require file:1:06

--- a/.gitignore
+++ b/.gitignore
@@ -286,3 +286,33 @@ __pycache__/
 *.btm.cs
 *.odx.cs
 *.xsd.cs
+.css
+EmpWebSites/favicon.ico
+EmpWebSites/Global.asax
+EmpWebSites.sln
+EmpWebSites/Global.asax.cs
+EmpWebSites/packages.config
+EmpWebSites/Project_Readme.html
+EmpWebSites/Startup.cs
+EmpWebSites/Web.config
+EmpWebSites/Web.Debug.config
+EmpWebSites/Web.Release.config
+EmpWebSites/App_Start/Startup.Auth.cs
+EmpWebSites/Content/bootstrap.css
+EmpWebSites/Content/
+EmpWebSites/fonts/
+EmpWebSites/Scripts/
+EmpWebSites/Views/Account/
+EmpWebSites/Views/Shared/
+EmpWebSites/Properties/AssemblyInfo.cs
+EmpWebSites/Views/_ViewStart.cshtml
+EmpWebSites/Views/Web.config
+EmpWebSites/Views/Manage/SetPassword.cshtml
+EmpWebSites/Views/Manage/VerifyPhoneNumber.cshtml
+EmpWebSites/Views/Manage/ManageLogins.cshtml
+EmpWebSites/Views/Manage/ChangePassword.cshtml
+EmpWebSites/Views/Manage/AddPhoneNumber.cshtml
+EmpWebSites/Views/Manage/Index.cshtml
+EmpWebSites/Views/Home/Index.cshtml
+EmpWebSites/Views/Home/Contact.cshtml
+EmpWebSites/Views/Home/About.cshtml
