Db handler changes

--- a/EmpWebSites/EmpWebSites.csproj
+++ b/EmpWebSites/EmpWebSites.csproj
@@ -358,6 +358,7 @@
     <Content Include="Content\DataTables\css\semanticui.scss" />
     <Content Include="Content\DataTables\css\mixins.scss" />
     <Content Include="Content\DataTables\css\common.scss" />
+    <None Include="Properties\PublishProfiles\EMP.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\Application_js\Demo.js" />
     <Content Include="Scripts\data-table.js" />
